# hbro

./: .travis.yml  Hbro.hs  LICENSE  README  README.rst  hbro.cabal  myBrowser.cabal  stack.yaml
Hbro/: Boot.hs  Clipboard.hs  Config.hs  Core.hs  Default.hs  Dyre.hs  Error.hs  Extra.hs  Gui.hs  Hbro.hs  Hooks.hs  IPC.hs  K.hs  Keys.hs  Logger.hs  Main.hs  Network.hs  Notification.hs  Options.hs  Prompt.hs  Signals.hs  Socket.hs  Types.hs  Util.hs
Hbro/Extra/: Bookmarks.hs  BookmarksQueue.hs  Clipboard.hs  Download.hs  History.hs  Misc.hs  Prompt.hs  Session.hs  StatusBar.hs
Hbro/Gdk/: KeyVal.hsc
Hbro/Gtk/: Entry.hs  ScrolledWindow.hs
Hbro/Gui/: Buildable.hs  NotificationBar.hs  PromptBar.hs  StatusBar.hs
Hbro/Gui/PromptBar/: Hooks.hs  Signals.hs
Hbro/IPC/: Hooks.hs  Signals.hs
Hbro/Keys/: Model.hs  Monadic.hs  Signals.hs
Hbro/Signals/: NotificationBar.hs
Hbro/WebView/: Hooks.hs  Signals.hs
Hbro/Webkit/: Lifted.hs  WebSettings.hs  WebView.hs
Network/URI/: Monadic.hs
examples/: Main.hs  hbro.hs  ui.xml
examples/scripts/: bookmarks.sh
executable/: Main.hs
src/: Browser.hs  Gui.hs  Main.hs  Socket.hs  Util.hs
