Name:                hbro
Version:             1.3.0.0
Synopsis:            Minimal KISS-compliant browser
Description:         Cf README
Homepage:            https://bitbucket.org/k0ral/hbro
Category:            Browser,Web

License:             OtherLicense
License-file:        LICENSE
-- Copyright:
Author:              koral <koral at mailoo dot org>
Maintainer:          koral <koral at mailoo dot org>

Cabal-version:       >=1.8
Build-type:          Simple
Extra-source-files:  README.rst
Data-files:          examples/ui.xml

Source-repository head
    Type:     git
    Location: https://github.com/k0ral/hbro.git

Library
    Build-depends:
        aeson,
        base == 4.*,
        bytestring,
        classy-prelude >= 0.9.4,
        cond,
        containers,
        data-default-class,
        dyre >= 0.8.8,
        errors,
        glib,
        gtk3 >= 0.13,
        hslogger,
        -- http-conduit,
        -- http-conduit-browser,
        -- http-types,
        integer-simple,
        lens >= 4.4,
        lifted-async >= 0.6,
        lifted-base >= 0.2.3.3,
        mtl < 2.2,
        monad-control >= 1.0,
        network-uri,
        optparse-applicative >= 0.11,
        pango,
        parsec,
        process,
        safe,
        semigroups,
        stm,
        system-fileio,
        text,
        -- text-icu,
        time,
        transformers,
        transformers-base,
        unix,
        webkitgtk3 >= 0.13,
        zeromq4-haskell
    Exposed-modules:
        Control.Monad.Reader.Tagged,
        Hbro,
        Hbro.Attributes,
        Hbro.Boot,
        Hbro.Clipboard,
        Hbro.Config,
        Hbro.Core,
        Hbro.Defaults,
        Hbro.Error,
        Hbro.Event,
        Hbro.Gdk.KeyVal,
        Hbro.Gui.Builder,
        Hbro.Gui.MainView,
        Hbro.Gui.NotificationBar,
        Hbro.Gui.PromptBar,
        Hbro.Gui.StatusBar,
        Hbro.IPC,
        Hbro.Keys,
        Hbro.Keys.Model,
        Hbro.Logger,
        Hbro.Prelude,
        Hbro.WebView.Signals,
        Network.URI.Extended
    Other-modules:
        Graphics.UI.Gtk.WebKit.Lifted,
        Graphics.UI.Gtk.WebKit.Lifted.WebView,
        -- Hbro.CFunctions,
        Hbro.Dyre,
        Hbro.Gui,
        Hbro.Options,
        Paths_hbro
    Extensions:
        GeneralizedNewtypeDeriving,
        MultiParamTypeClasses,
        OverloadedStrings,
        RankNTypes,
        StandaloneDeriving
    -- Build-tools: hsc2hs
    -- C-sources: cbits/cbits.c
    -- Include-dirs: include
    -- Includes: include/cbits.h
    -- Install-includes: include/cbits.h
    Hs-Source-Dirs: library
    Ghc-options: -Wall -fno-warn-unused-do-bind -threaded

Flag threaded
    Description: Build with -threaded
    Default: True

Executable hbro
    Build-depends:
        hbro >= 1.2.0.0,
        base == 4.*
    Main-is: Main.hs
    Hs-Source-Dirs: executable
    Ghc-options: -Wall
    if flag(threaded)
        Ghc-options: -threaded
