Name:                hbro
Version:             1.6.0.0
Synopsis:            Minimal extensible web-browser
Description:         Cf README
Homepage:            https://github.com/k0ral/hbro
Category:            Browser,Web

License:             OtherLicense
License-file:        LICENSE
-- Copyright:
Author:              koral <koral at mailoo dot org>
Maintainer:          koral <koral at mailoo dot org>

Cabal-version:       >=1.8
Build-type:          Simple
Extra-source-files:  README.rst
Data-files:          examples/ui.xml

Source-repository head
    Type:     git
    Location: https://github.com/k0ral/hbro.git

Library
    Build-depends:
        base == 4.*,
        bytestring,
        chunked-data,
        cond,
        containers,
        data-default-class,
        directory,
        dyre >= 0.8.8,
        errors,
        safe-exceptions,
        fast-logger,
        filepath,
        glib,
        gtk3 >= 0.13,
        -- http-conduit,
        -- http-conduit-browser,
        -- http-types,
        lens >= 4.4,
        lifted-async >= 0.6,
        lifted-base >= 0.2.3.3,
        mtl >= 2.2,
        monad-control >= 1.0,
        monad-logger >= 0.3.6.2,
        monadIO,
        mono-traversable,
        network-uri,
        optparse-applicative >= 0.11,
        pango,
        parsec,
        process,
        random,
        resourcet >= 1.1.5,
        safe,
        semigroups,
        stm-chans,
        text,
        -- text-icu,
        time >= 1.5,
        transformers,
        transformers-base,
        unix,
        uuid,
        webkitgtk3 >= 0.13.1.2,
        zeromq4-haskell
    if impl(ghc < 7.10)
       Build-depends: integer-simple

    Exposed-modules:
        Control.Monad.Logger.Extended
        Control.Monad.Reader.Extended
        Graphics.Rendering.Pango.Extended
        Graphics.UI.Gtk.General.General.Extended
        Hbro
        Hbro.Boot
        Hbro.Clipboard
        Hbro.Config
        Hbro.Core
        Hbro.Defaults
        Hbro.Error
        Hbro.Event
        Hbro.Gdk.KeyVal
        Hbro.Gui.Builder
        Hbro.Gui.MainView
        Hbro.Gui.NotificationBar
        Hbro.Gui.PromptBar
        Hbro.Gui.StatusBar
        Hbro.IPC
        Hbro.Keys
        Hbro.Keys.Model
        Hbro.Logger
        Hbro.Prelude
        Hbro.WebView.Signals
        Network.URI.Extended
        System.Glib.Attributes.Extended
        System.Process.Extended
    Other-modules:
        Graphics.UI.Gtk.WebKit.Extended
        -- Hbro.CFunctions
        Hbro.Dyre
        Hbro.Gui
        Hbro.Options
        Paths_hbro
    -- Build-tools: hsc2hs
    -- C-sources: cbits/cbits.c
    -- Include-dirs: include
    -- Includes: include/cbits.h
    -- Install-includes: include/cbits.h
    Hs-Source-Dirs: library
    Ghc-options: -Wall -fno-warn-unused-do-bind

Flag threaded
    Description: Build with -threaded
    Default: True

Executable hbro
    Build-depends:
        hbro >= 1.5,
        base == 4.*
    Main-is: Main.hs
    Hs-Source-Dirs: executable
    Ghc-options: -Wall
    if flag(threaded)
        Ghc-options: -threaded
